# tool-context-relay

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  run-case
.codex/rules/: default.rules
.github/: FUNDING.yml
prompt_cases/: case0.md  case1.md  case1.txt  case2.md  case2.txt  case3.md  case3.txt  case4.md  case4.txt
prompts/: case0.md  case1.md  case2.md  case3.md  case4.md  web1.md
src/tool_context_relay/: __main__.py  agent.py  boxing.py  cli.py  main.py  mcp_deepcheck.py  mcp_yt.py  openai_env.py  pretty.py  temperature.py  tool_relay.py
src/tool_context_relay/agent/: __init__.py  agent.py  context.py  handler.py  pretty.py  tool_definitions.py
src/tool_context_relay/agent/boxing_modes/: __init__.py  base.py  json.py  opaque.py
src/tool_context_relay/testing/: __init__.py  integration_hooks.py  integration_matrix.py  prompt_cases.py
src/tool_context_relay/tools/: google_drive.py  mcp_deepcheck.py  mcp_email.py  mcp_google_drive.py  mcp_img_description.py  mcp_page.py  mcp_web_screenshot.py  mcp_yt.py  tool_relay.py
tests/: conftest.py  test_agent.py  test_agent_instructions.py  test_capture_tool_calls.py  test_cli.py  test_google_drive.py  test_handler_stats.py  test_hook_logging.py  test_integration_matrix.py  test_internal_tools.py  test_main.py  test_openai_env.py  test_packaging.py  test_pretty.py  test_prompt_cases.py  test_response_extraction.py  test_tool_arg_logging.py  test_tool_definitions.py  test_tools.py
tests/integration/: test_scenarios_integration.py
